# buyitforlifescore

./: .caddy  .dockerignore  .env.test  .gitignore  .prettierignore  ANALYTICS.md  DATA_PIPELINE.md  GEMINI.md  RAILWAY.md  README.md  docker-compose.yml  fix-lint.js  fix-lint2.js  generate_evals.mjs  gold-taxonomy.csv  package-lock.json  package.json  query.json  query_part.json  test-epoch.ts  test-server-actions.ts  tsconfig.next.json  turbo.json
app/pipeline/: .dockerignore  .gitignore  Dockerfile  LLM_ASSET_DEVELOPMENT_WORKFLOW.md  PIPELINE_ARCHITECTURE.md  _fetch_real.py  _generate_30_benchmarks.py  _list_s3.py  append_and_fetch.py  bootstrap_thread.py  dagster.production.yaml  dagster.yaml  dump_thread.py  eval_results.csv  fetch_thread.py  package.json  pyproject.toml  query.json  railway-worker.toml  railway.toml  run.sh  run_worker.sh  scratch.py  test_gemini.py  test_r2.py  test_tokens.py  test_tui.py  thread_dump.txt  workspace.yaml
app/pipeline/.dg/: telemetry.yaml
app/pipeline/fixtures/: silver_entity_discovery_benchmark.json  silver_entity_extraction_benchmark.json  silver_entity_triage_benchmark.json  silver_mentions_benchmarks.json
app/pipeline/scratch/: 50_eval_log.txt  81_eval_log.txt  88_eval_log.txt
app/pipeline/scripts/: eval_offline_entity_discovery.py  eval_offline_entity_triage.py  eval_online_entity_discovery.py  eval_runner.py  eval_tui.py  generate_harlequin_catalog.py  materialize_entity_discovery_seed.py  materialize_entity_resolution_seed.py  materialize_offline_seed.py  materialize_sample.py  nuke_zombie_runs.py  run_entity_discovery_eval_offline.py  run_entity_discovery_eval_online.py  run_entity_resolution_eval_offline.py  run_entity_resolution_eval_online.py  run_eval_offline.py  sample.py  silver_entity_attributes_eval_runner.py  silver_entity_discovery_eval_runner.py  silver_entity_extraction_eval_runner.py
app/pipeline/tests/: test_tree.py
(+274 files in other folders)
