[project]
name = "pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.0",
    "duckdb",
    "google-genai",
    "pydantic",
    "pandas",
    "tabulate",
    "tqdm>=4.67.3",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipeline"
registry_modules = [
    "pipeline.components.*",
]


